# magma-compute

./: .gitignore  Cargo.toml  README.md  stderr  stdout
src/: gpu.rs  main.rs
src/shaders/: main.comp  main.frag  main.vert
