[package]
name = "magma-compute"
version = "0.1.0"
authors = ["Jonas Luther <kryo4096@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.26"
vulkano-shaders = "0.26"
vulkano-win = "0.26"
winit = "0.25"
anyhow = "1.0"
thiserror = "1.0"
bitflags = "1.3"
derive-getters = "0.2.0"
